--- a/style.css
+++ b/style.css
@@ -48,7 +48,20 @@ body {
 #pausebutton {
     top: 10px;
     left: 10px;
+}
+
+#restartlabel {
+    position: absolute;
+    z-index: 4;
+    text-align: center;
+    width: 100%;
+    color: white;
     font-weight: bold;
+    font-size: 20pt;
+    text-shadow: black 3px 3px 3px;
+}
+
+.circularbutton {
     width: 60px;
     height: 60px;
     z-index: 4;
@@ -65,8 +78,8 @@ body {
     width: 100%;
     height: 100%;
     z-index: 3;
-    background-color: rgba(150, 150, 150, 0.3);
-    backdrop-filter: blur(3px);
+    background-color: rgba(150, 150, 150, 0.2);
+    backdrop-filter: blur(5px);
 }
 
 #scorelabel {
@@ -76,6 +89,7 @@ body {
     font-size: 20pt;
     z-index: 4;
     position: absolute;
+    text-shadow: black 3px 3px 3px;
 }
 
 #gamespace {
