--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+:root {
+    --background: rgb(121, 118, 118);
+    --scorebody: rgb(159, 159, 159);
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: rgb(121, 118, 118);
+    background-color: var(--background);
 }
 
 #player {
@@ -103,7 +108,8 @@ body {
 #helpbutton {
     top: 10px;
     left: 10px;
-    transition: scale 0.1s;
+    transition: scale 0.2s;
+    transition-delay: 0.2s;
     background-image: url("assets/helpbutton.png");
     z-index: 0;
 
@@ -113,26 +119,32 @@ body {
 
 #helppart:hover .helptext {
     visibility: visible;
-    box-shadow: rgb(50,50,50) 10px 10px 20px;
+    transition: opacity 0.2s;
+    transition-delay: 0.1s;
+    opacity: 1;
 }
 
 #helppart:hover #helpbutton {
-    transition: scale 0.1s;
+    transition: scale 0.2s;
     scale: 1.2;
 }
 
 .helptext {
-    left: 10px;
-    top: 78px;
     visibility: hidden;
-    position: absolute;
-    z-index: 1;
+    transition: opacity 0.2s, visibility 0.25s;
+    transition-delay: 0.1s;
     background-color: white;
     width: 300px;
+    height: auto;
+    padding: 15px;
+    left: 10px;
+    top: 78px;
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
     font-weight: 450;
     font-size: 16pt;
     border-radius: 30px;
-    padding: 15px;
     line-height: 28px;
 }
 
@@ -224,6 +236,7 @@ body {
 }
 
 #soundicon {
+    cursor: pointer;
     scale: 2;
     border-radius: 50%;
     margin-right: 20px;
@@ -266,8 +279,6 @@ body {
     right: 10px;
 }
 
-
-
 #scoretablebox {
     position: absolute;
     right: 10px;
@@ -283,7 +294,7 @@ body {
 
 #scoretable {
     border-collapse: collapse;
-    background-color: rgb(159, 159, 159);
+    background-color: var(--scorebody);
     border-radius: 10px;
 }
 
