--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ body {
     position: absolute;
     z-index: 0;
 }
+
+.hitmark {
+    position: absolute;
+    z-index: 2;
+}
+
 .asteroid {
     position: absolute;
     z-index: 1;
